[gd_scene load_steps=6 format=3 uid="uid://7gv6q50fuutj"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_1w47b"]
[ext_resource type="PackedScene" uid="uid://dbduds4bsaaby" path="res://Scenes/Bullet/Bullet.tscn" id="2_je25s"]
[ext_resource type="PackedScene" uid="uid://in328vnsfqnc" path="res://Models/lantern.obj" id="3_0c3xh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_emkox"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6b3ky"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_1w47b")
_bullet_scene = ExtResource("2_je25s")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_emkox")

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6b3ky")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3d" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.468479, -0.463024)

[node name="RayCast3d" type="RayCast3D" parent="Head/Camera3d"]
transform = Transform3D(2.98023e-08, 0, 1, 0, 1, 0, -1, 0, 2.98023e-08, 0, -0.00588068, 0.463024)
target_position = Vector3(60, 0, 0)

[node name="lanternHolder" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.865748, 0.798776, -1.96602)

[node name="lantern2" parent="." instance=ExtResource("3_0c3xh")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.714483, -0.0142534, -1.84464)

[node name="OmniLight3d" type="OmniLight3D" parent="lantern2"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0.743871, 2.46289, -0.665964)
light_color = Color(1, 1, 0.301961, 1)
light_energy = 0.5

[node name="HingeJoint3d" type="HingeJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.851416, 0.798776, -1.97064)
node_a = NodePath("../lanternHolder")
node_b = NodePath("../lantern2")
angular_limit/enable = true
angular_limit/upper = 0.523599
angular_limit/lower = -0.523599
angular_limit/bias = 0.19
angular_limit/softness = 2.0
